--- a/index.html
+++ b/index.html
@@ -26,15 +26,10 @@
 </head>
 
 <body>
-  <form class="bar">
-    <input class="form-control search-bar" type="text" placeholder="Search from store" aria-label="Search" style="height : 55px; width:80%;">
-  </form>
 
   <div class="main">
 
     <div class="banner">
-      <a href="#" id="search_btn"><i class="fas fa-search custom-icon" style="right:5rem;"></i></a>
-      <a href="#" id="cart_btn"><i class="fas fa-shopping-cart custom-icon" style="right:2rem;"></i></a>
       <img src="images/banner.jpg" alt="" class="banner-img" width="100%">
     </div>
 
@@ -66,6 +61,10 @@
           <li class="nav-item">
             <a class="nav-link contact">CONTACT US</a>
           </li>
+          <div class="searchbar">
+            <input class="search_input" type="text" name="" placeholder="Search..." style="padding: 0;">
+            <a href="#" class="search_icon"><i class="fas fa-search" style="font-size: 20px;"></i></a>
+          </div>
         </ul>
       </div>
     </nav>
